Fix app not launching in JVM 16+ because of reflective access